<resources>
    <string name="app_name">iSecurity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_users">Usuarios</string>
    <string name="title_user">Usuario</string>
    <string name="title_alerts">Alertas</string>
    <string name="title_devices">Dispositivos</string>
    <string name="title_device">Dispositivo</string>
    <string name="title_domains">Dominios</string>
    <string name="title_domain">Dominio</string>

    <string name="device_card_title">Titulo</string>
    <string name="device_card_owner">Dueño</string>
    <string name="device_card_status">Conectado</string>


    <string name="user_card_title">Titulo</string>
    <string name="user_card_status">Activo</string>
    <string name="user_card_job">Puesto</string>
    <string name="user_card_department">Departamento</string>

    <string name="alert_card_title">Titulo</string>
    <string name="alert_card_status">Activo</string>
    <string name="alert_card_description">Descripción alertas</string>
    <string name="alert_card_button">Resolver</string>
    <string name="alert_card_type">ALERTA</string>


    <string name="alert_notification_title">Resolver Alerta</string>
    <string name="alert_notification_description">Está a punto de resolver una alerta notificada por el sistema. En el
        momento en el que acepte, el sistema marcará la alerta como resuelta y no podrá volver a cambiar el estado
    </string>
    <string name="alert_notification_btn1">Resolver</string>
    <string name="alert_notification_btn2">Cancelar</string>

    <string name="domain_card_title">Titulo</string>
    <string name="domain_card_status">Activo</string>
    <string name="domain_card_description">Descipción</string>
    <string name="domain_card_url">https://www.example.com</string>
    <string name="domain_card_department">DOMINIO</string>


    <string name="dashboard_users">Usuarios conectados:</string>
    <string name="dashboard_alerts">alertas</string>
    <string name="dashboard_devices">Dispositivos conectados:</string>
    <string name="dashboard_domain">Dominios activos:</string>
    <string name="dashboard_cnt">0</string>


</resources>
