<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".controller.Activities.AlertResolveActivity"
        android:background="#9C000000">

    <View
            android:id="@+id/popup"
            android:layout_width="0dp"
            android:layout_height="220dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:background="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.44"/>

    <TextView
            android:id="@+id/title_popup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/alert_notification_title"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/popup"
            app:layout_constraintTop_toTopOf="@+id/popup"/>

    <TextView
            android:id="@+id/textView6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/alert_notification_description"
            android:textColor="@color/space_background_color"
            app:layout_constraintEnd_toEndOf="@+id/popup"
            app:layout_constraintStart_toStartOf="@+id/popup"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/title_popup"/>

    <Button
            android:id="@+id/btn_accept"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/alert_notification_btn1"
            android:textColor="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="@+id/popup"
            app:layout_constraintEnd_toEndOf="@+id/popup"/>

    <Button
            android:id="@+id/btn_decline"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/alert_notification_btn2"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@+id/btn_accept"
            app:layout_constraintEnd_toStartOf="@+id/btn_accept"
            app:layout_constraintTop_toTopOf="@+id/btn_accept"/>

</android.support.constraint.ConstraintLayout>