<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackgroundDark"
        tools:context=".controller.Activities.DashboardActivity">

    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:id="@+id/title_toolbar"
                    android:text="@string/title_dashboard"
                    android:textAppearance="@android:style/TextAppearance.Material.Small"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
            <Button
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:id="@+id/btn_close"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:background="@drawable/ic_menu_close"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" android:backgroundTint="@color/colorWhite"
                    android:layout_marginEnd="12dp"/>
        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.Toolbar>
    <View
            android:layout_width="wrap_content"
            android:layout_height="140dp"
            android:id="@+id/view" app:layout_constraintStart_toStartOf="parent"
            android:background="@color/colorWhite"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
            android:id="@+id/total_issues_bck"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:src="@drawable/ic_total_issues_bkg"
            app:layout_constraintTop_toTopOf="@+id/view" app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintStart_toStartOf="@+id/view" android:layout_marginStart="16dp"/>

    <TextView
            android:id="@+id/total_issues_lbl"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:text="0"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textSize="45sp"
            app:layout_constraintBottom_toBottomOf="@+id/total_issues_bck"
            app:layout_constraintEnd_toEndOf="@+id/total_issues_bck"
            app:layout_constraintStart_toStartOf="@+id/total_issues_bck"
            app:layout_constraintTop_toTopOf="@+id/total_issues_bck"
            app:layout_constraintVertical_bias="0.52"/>

    <TextView
            android:id="@+id/issues_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dashboard_alerts"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/total_issues_bck"
            app:layout_constraintEnd_toEndOf="@+id/total_issues_bck"
            app:layout_constraintStart_toStartOf="@+id/total_issues_bck"
            app:layout_constraintTop_toTopOf="@+id/total_issues_bck"
            app:layout_constraintVertical_bias="0.78"/>

    <ProgressBar
            android:id="@+id/issue_progress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:progressDrawable="@drawable/circular_progress_bar"
            android:indeterminate="false"
            android:max="100"
            android:progress="0"
            app:layout_constraintBottom_toBottomOf="@+id/total_issues_bck"
            app:layout_constraintEnd_toEndOf="@+id/total_issues_bck"
            app:layout_constraintStart_toStartOf="@+id/total_issues_bck"
            app:layout_constraintTop_toTopOf="@+id/total_issues_bck"/>

    <TextView
            android:text="@string/dashboard_users"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/users_dasboard_lbl" app:layout_constraintStart_toEndOf="@+id/issue_progress"
            android:layout_marginStart="16dp" android:textColor="@color/colorPrimary" android:layout_marginTop="18dp"
            app:layout_constraintTop_toTopOf="@+id/issue_progress"/>

    <TextView
            android:text="@string/dashboard_devices"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/devices_dasboard_lbl"
            android:textColor="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="@+id/users_dasboard_lbl" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/users_dasboard_lbl"/>

    <TextView
            android:text="@string/dashboard_domain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/domains_dasboard_lbl"
            android:textColor="@color/colorPrimary" app:layout_constraintStart_toStartOf="@+id/devices_dasboard_lbl"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/devices_dasboard_lbl"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/users_dasboard_cnt" app:layout_constraintStart_toEndOf="@+id/users_dasboard_lbl"
            android:layout_marginStart="8dp" tools:text="@string/dashboard_cnt"
            app:layout_constraintBaseline_toBaselineOf="@+id/users_dasboard_lbl"/>

    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/devices_dasboard_cnt" app:layout_constraintStart_toEndOf="@+id/devices_dasboard_lbl"
            android:layout_marginStart="8dp" tools:text="@string/dashboard_cnt"
            app:layout_constraintBaseline_toBaselineOf="@+id/devices_dasboard_lbl"/>

    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/domains_dasboard_cnt" app:layout_constraintStart_toEndOf="@+id/domains_dasboard_lbl"
            android:layout_marginStart="8dp" tools:text="@string/dashboard_cnt"
            app:layout_constraintBaseline_toBaselineOf="@+id/domains_dasboard_lbl"/>


</android.support.constraint.ConstraintLayout>