<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             android:layout_width="match_parent"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="160dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            app:cardBackgroundColor="@color/colorBackgroundLight"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:cardCornerRadius="8dp" app:cardElevation="@dimen/cardview_default_radius">

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:id="@+id/user_card_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/user_card_title"
                    android:textColor="@color/common_google_signin_btn_text_light_pressed"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toStartOf="@+id/user_card_img"
                    app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/user_card_department"/>

            <TextView
                    android:id="@+id/user_card_job"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/user_card_job"
                    app:layout_constraintStart_toStartOf="@+id/user_card_title"
                    app:layout_constraintTop_toBottomOf="@+id/user_card_title"
                    android:textColor="@color/space_background_color" android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toStartOf="@+id/user_card_img"/>

            <TextView
                    android:id="@+id/user_card_status"
                    android:layout_width="wrap_content"
                    android:layout_height="19dp"
                    android:text="@string/user_card_status"
                    app:layout_constraintStart_toEndOf="@+id/user_card_dot" android:layout_marginStart="4dp"
                    app:layout_constraintTop_toTopOf="@+id/user_card_dot"
                    app:layout_constraintBottom_toBottomOf="@+id/user_card_dot"
                    android:textColor="@color/colorOffline"/>
            <ImageView
                    android:layout_width="79dp"
                    android:layout_height="79dp" tools:srcCompat="@tools:sample/avatars"
                    android:id="@+id/user_card_img" android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="16dp"/>
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" app:srcCompat="@drawable/ic_status_oval"
                    android:id="@+id/user_card_dot" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp" android:layout_marginBottom="16dp"
                    app:layout_constraintBottom_toBottomOf="parent" android:tint="@color/colorOffline"/>
            <TextView
                    android:text="@string/user_card_department"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/user_card_department" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp" app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/common_google_signin_btn_text_dark_focused"/>

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>