<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackgroundDark"
        tools:context=".controller.Activities.DomainDetailActivity">

    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:id="@+id/title_toolbar"
                    android:text="@string/title_domain"
                    android:textAppearance="@android:style/TextAppearance.Material.Small"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
            <Button
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:id="@+id/btn_close"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:background="@drawable/ic_menu_close"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" android:backgroundTint="@color/colorWhite"
                    android:layout_marginEnd="12dp"/>
        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.Toolbar>

    <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp" tools:srcCompat="@tools:sample/avatars"
            android:id="@+id/domain_avatar" app:layout_constraintTop_toBottomOf="@+id/toolbar"
            android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>
    <TextView
            android:text="@string/domain_card_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/domain_title"
            android:textAppearance="@android:style/TextAppearance.Material.Large" android:textSize="24sp"
            android:layout_marginEnd="10dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="25dp"
            app:layout_constraintTop_toTopOf="@+id/domain_avatar"
            app:layout_constraintStart_toEndOf="@+id/domain_avatar"
            android:layout_marginStart="10dp"/>
    <TextView
            android:text="@string/domain_card_url"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/domain_url" android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/domain_title"
            app:layout_constraintStart_toStartOf="@+id/domain_title"
            app:layout_constraintEnd_toEndOf="@+id/domain_title"/>
    <android.support.v7.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="0dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/domain_avatar" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/domain_detail_adapter"/>

</android.support.constraint.ConstraintLayout>